[workspace.lints.rust]
#unsafe_code = "forbid"
unused = "allow" # debug: For experimental dev.

[workspace]
resolver = "2"
members = [
  "cmd/exercises",
  "cmd/guessing-game",
  "cmd/minigrep",
  "examples/advance",
  "examples/pattern-matching",
  "hack/sandbox",
  "lib/libui",
  "lib/libutil",
]
