[package]
name = "blinky"
version = "0.1.0"
authors = ["Schubert Anselme <schubert@anselm.es>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
