[package]
name = "exercises"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exercise-1"
path = "src/ex1/main.rs"

[[bin]]
name = "exercise-2"
path = "src/ex2/main.rs"

[dependencies]
libutil = { path = "../../lib/libutil" }
futures = { version = "0.3.30", features = ["thread-pool"] }

[lints]
workspace = true
