[package]
name = "advance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unsafe"
path = "src/unsafe.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "types"
path = "src/types.rs"

[[bin]]
name = "fn"
path = "src/functions_and_closures.rs"

[dependencies]

[lints]
workspace = true
