[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Schubert Anselme <schubert@anselm.es"]
categories = ["command-line-utilities"]
description = "A tool to search files"
homepage = "https://github.com/sanselme/cli"
keywords = ["cli", "search", "demo"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/sanselme/cli"

[package.metadata.bundle]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"

[lints]
workspace = true
