[package]
name = "oscore"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-args = ["-display", "curses", "-serial", "mon:stdio"]
test-args = ["-display", "none", "-serial", "mon:stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # in seconds

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.1"
volatile = "0.2.6"
x86_64 = "0.14.2"

[lints.rust]
unsafe_code = "allow"
