[package]
name = "hellocli"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { version = "0.1.0", path = "../../api" }
clap = { version = "4.5.21", features = ["derive"] }
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tonic = "0.12.3"

[lints]
workspace = true
